# safety-persists-llm-agents

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_toolemu.sh  setup.py
assets/: all_cases.json
minor_scripts/: clean_error_records.py  delete_eval_files.py  delete_files_by_pattern.py  move_completed_dpo.py  rename_files.py  sample_single_replicate.py
slurm_scripts/: monitor_jobs.py  rerun_failed_evals.py  run_eval.sh  run_rerun_failed.sh  run_toolemu.sh  run_training.sh  slurm_utils.py  submit_eval.py  submit_merge.sh  submit_rerun_failed.py  submit_toolemu.sh  submit_training.sh
src/analysis/: analyze_metric_correlation.py  analyze_token_limits.py  compare_source_finetuned.py  compute_persistence.py  extract_starting_metrics.py  fix_eval_parsing.py  generate_plots.py  generate_tables.py  partition_results_by_split.py  print_results_table.py
src/evaluation/: emulate.py  evaluate.py  run.py
src/training/: merge_lora.py  prepare_dpo_data.py  train_dpo.py
src/utils/: analysis_utils.py  model_name_utils.py  (+2 more)
tests/: conftest.py  test_analysis_utils.py  test_analyze_metric_correlation.py  test_analyze_token_limits.py  test_compare_source_finetuned.py  test_compute_persistence.py  test_evaluate.py  test_fix_eval_parsing.py  test_generate_plots.py  test_merge_lora.py  test_model_name_utils.py  test_partition_results_by_split.py  test_prepare_dpo_data.py  test_print_results_table.py  test_rerun_failed_evals.py  test_toolemu_utils.py  test_train_dpo.py  test_train_utils.py
toolemu/: agent_executor_builder.py  dataloader.py  evaluators.py
(+8347 files in other folders)
